# progenitor

./: .gitignore  README.md  history.txt  package-lock.json  package.json
.prevcode/: state.rs
core/: Cargo.toml
core/src/: env_config.rs  errors.rs  lib.rs
core/src/archetype/: component.rs  indirection.rs  mod.rs  model.rs  model_mutations.rs  mutation.rs  primitives.rs  traits.rs
core/src/archetype/model/: common.rs  mod.rs  model.rs  mutations.rs
core/src/comm/: driver.rs  errors.rs  handlers.rs  http1_driver.rs  io.rs  mod.rs  server.rs
core/src/communication/: common.rs  driver.rs  handlers.rs  http1_driver.rs  mod.rs  server.rs
core/src/logic/: effect.rs  mod.rs  state.rs
core/src/persistence/: common.rs  driver.rs  inmem_backend.rs  mod.rs  query.rs  store.rs
core/src/resources/: mod.rs  scene.rs
core/src/resources/communication/: common.rs  driver.rs  handlers.rs  http1_driver.rs  mod.rs
core/src/resources/net/: common.rs  driver.rs  http1_driver.rs  server.rs
core/src/resources/persistence/: common.rs  driver.rs  inmem_backend.rs  mod.rs  mongodb_backend.rs  query.rs  store.rs
core/src/resources/runtime/: mod.rs  server.rs
core/src/resources/serialization/: common.rs  json.rs  mod.rs
core/src/resources/storage/: base.rs  mod.rs  mongodb_backend.rs
core/src/schema/: component.rs  errors.rs  indirect_expr.rs  indirect_mutation.rs  indirect_ref.rs  indirect_type.rs  indirect_value.rs  mod.rs  serial.rs  serial_json.rs  serial_repr.rs
core/src/serial/: conversion.rs  errors.rs  ext_json.rs  ext_pseudo.rs  format.rs  mod.rs
core/src/store/: driver.rs  errors.rs  ext_inmem.rs  mod.rs  query.rs  store.rs
engine/progenitor/: Cargo.toml
engine/progenitor/src/: env_config.rs  errors.rs  init.rs  lib.rs  lock.rs  registry.rs
engine/progenitor/src/comm/: ext_http1.rs  io.rs  mod.rs
engine/progenitor/src/effects/: context.rs  effect.rs  errors.rs  mod.rs  primitives.rs
engine/progenitor/src/logic/: effect.rs
engine/progenitor_server/: Cargo.toml
engine/progenitor_server/src/: effects.rs  init.rs  lib.rs  lock.rs
(+131 files in other folders)
