[package]
name = "progenitor_server"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.2.1"
tokio = { version = "1.21.2", features = ["full"] }
macro_rules_attribute = "0.1.3"
http-body-util = "0.1.0-rc.1"
log = "0.4"

progenitor = { path = "../progenitor" }

# TODO tmp?
hyper = { version = "1.0.0-rc.1", features = ["full"] }
